增加教室设置静态

--- a/src/app.json
+++ b/src/app.json
@@ -11,7 +11,7 @@
 //    "pages/courseDetail/courseDetail", // 课程详情  传入值 type 对应规则 1 线上课程 2 线下课程 3 教室 4 驻店课程
 //    "pages/courseList/courseList", // 课程列表
     "pages/courseOffline/courseOffline" // 线下相关
-//    "pages/course/course" // 课程
+//    "pages/course/course" // 课程,,
     // Dont remove this comment
   ],
   "subPackages": [
@@ -104,6 +104,7 @@
       "root": "releasePage", // 收藏分包
       "name": "release",
       "pages": [
+        "pageseleven/releaseCourse/releaseCourse", // 发布课程
         "pageseleven/release/release" // 我的收藏&我的预约
       ]
     }
